logs/aktos-dcs.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aktos_dcs'...
Compiling './lib/python3.5/site-packages/aktos_dcs/__init__.py'...
***   File "./lib/python3.5/site-packages/aktos_dcs/__init__.py", line 17
    print "got message: ", msg
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aktos_dcs/gevent_actor.py'...
***   File "./lib/python3.5/site-packages/aktos_dcs/gevent_actor.py", line 28
    print "broadcasting msg (DUMMY) : ", msg
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aktos_dcs/gevent_network_actor.py'...
***   File "./lib/python3.5/site-packages/aktos_dcs/gevent_network_actor.py", line 69
    print color.color(msg, fg_blue=True)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aktos_dcs/messages.py'...
***   File "./lib/python3.5/site-packages/aktos_dcs/messages.py", line 32
    print "WARNING: This method is depreciated, use get_msg_body() instead."
                                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aktos_dcs-0.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
